feat: migrar banco de H2 para MySQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=encurta-link
+spring.application.name=sistema-usuarios
+
+# MySQL Database
+spring.datasource.url=jdbc:mysql://localhost:3306/encurta_link?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=150422
+
+# JPA
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Desliga H2
+spring.h2.console.enabled=false
