--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=sistema-usuarios
 
 # MySQL Database
-spring.datasource.url=jdbc:mysql://localhost:3306/encurta_link?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=150422
+spring.datasource.url=jdbc:mysql://localhost:3306/NOME_DO_BANCO?createDatabaseIfNotExist=true
+spring.datasource.username=SEU_USUARIO
+spring.datasource.password=SUA_SENHA
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
